# actix-web-authz-benchmark

./: .gitignore  Cargo.toml  README.md  bench.sh
actix-web-grants/: Cargo.toml
actix-web-grants/benches/: endpoints.rs
actix-web-grants/src/: main.rs
casbin-rs/: Cargo.toml
casbin-rs/benches/: endpoints.rs
casbin-rs/config/: policy.csv
casbin-rs/src/: lib.rs  main.rs
